@@ -1,44 +1,16 @@
 package io.github.Hayo87.dto;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-import io.github.Hayo87.type.BuildType;
-
 public class BuildRequestDTO {
-    private BuildType action;
-    private String input;
-    private List<FilterActionDTO> filters = new ArrayList<>();
-
-    public BuildRequestDTO(BuildType action, String input) {
-        this.action = action;
-        this.input = input;
-    }
-
-    public BuildType getAction() {
-        return action;
-    }
-
-    public void setAction(BuildType action) {
-        this.action = action;
-    }
-
-    public String getInput() {
-        return input;
-    }
-
-    public void setInput(String input) {
-        this.input = input;
-    }
+    private List<FilterActionDTO> filters;
 
     public List<FilterActionDTO> getFilters() {
-        return filters != null ? filters : Collections.emptyList();
+        return filters == null ? List.of() : filters;
     }
-
+    
     public void setFilters(List<FilterActionDTO> filters) {
         this.filters = filters;
     }
 }
-
-
+    
